--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tic-Tac-Toe 2.0</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
      <main>
@@ -21,6 +22,7 @@
                 <button class="box"></button>
             </div>
         </div>
+        <button id="reset">RESET GAME</button>
      </main>
 </body>
 </html>
