--- a/index.html
+++ b/index.html
@@ -24,5 +24,6 @@
         </div>
         <button id="reset">RESET GAME</button>
      </main>
+     <script src="script.js"></script>
 </body>
 </html>
